# transcript-intelligence

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: transcript_intelligence.ipynb
src/transcript_intelligence/: __main__.py  models.py  prompts.py
src/transcript_intelligence/analysis/: report.py  visualizations.py
src/transcript_intelligence/pipeline/: graph.py
src/transcript_intelligence/pipeline/nodes/: classify.py  cluster.py  embed.py  ingest.py  insights.py  sentiment.py
